--- a/html/homepage.html
+++ b/html/homepage.html
@@ -10,36 +10,23 @@
     <div class="menu">
 
         <div class="logo">
-            <img src="icono.png" alt="Logo HTML">
-        </div>
-
-        <div class="apartados">
-            <ul>
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Horario</a></li>
-                <li><a href="#">Localicación</a></li>
-                <li><a href="#">Galería</a></li>
-                <li><a href="#">Actividades</a></li>
-                <li><a href="#">
-                    <div class="apuntarse">
-                        ¡Apúntate ahora!
-                    </div>
-                </a></li>
-                <li><a href="#">
-                    <div class="inicio-sesion">
-                        Inicio de sesion
-                    </div>
-                    
-                </a></li>
-            </ul>
+            <img src="../html/imagenes/logo.png" alt="Logo HTML">
         </div>
 
 
+        <ul class="sections">
+            <li><a href="#">Inicio</a></li>
+            <li><a href="#">Horario</a></li>
+            <li><a href="#">Localicación</a></li>
+            <li><a href="#">Galería</a></li>
+            <li><a href="#">Actividades</a></li>
+            <li class="register"><a href="#">¡Apúntate ahora!</a></li>
+            <li class="login"><a href="#"> Inicio de sesion</a></li>
+        </ul>
     </div>
 
-    <div class="fondo">
 
-    </div>
+
 
 </body>
 
