--- a/html/homepage.html
+++ b/html/homepage.html
@@ -24,9 +24,72 @@
             <li class="login"><a href="#"> Inicio de sesion</a></li>
         </ul>
     </div>
+    <div class="highlights-title">
+        HIGHLIGHTS
+    </div>
+    <div class="highlights">
 
+        <div class="cardio">
 
+            <img src="https://content.rsggroup.com/image/upload/q_auto:best,f_auto,dpr_2,w_320,h_480/v1576072380/Facelift2020/cardio_flip_kachel_01_320x480"
+                alt="LOGO HTML">
+        </div>
+        <div class="maquinas">
+            <img src="https://content.rsggroup.com/image/upload/q_auto:best,f_auto,dpr_2,w_320,h_480/v1576083493/Facelift2020/geraete_flip_kachel_02_320x480"
+                alt="LOGO HTML">
+        </div>
+        <div class="peso-libre">
+            <img src="https://content.rsggroup.com/image/upload/q_auto:best,f_auto,dpr_2,w_320,h_480/v1576083493/Facelift2020/freihanteln_flip_kachel_02_320x480"
+                alt="LOGO HTML">
+        </div>
+        <div class="clases">
+            <img src="https://content.rsggroup.com/image/upload/q_auto:best,f_auto,dpr_2,w_320,h_480/v1576082910/Facelift2020/kurse_flip_kachel_05_320x480"
+                alt="LOGO HTML">
 
+        </div>
+
+    </div>
+
+    <div>
+        <p class="final-text">"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
+            laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae
+            dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
+            consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem
+            ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut
+            labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem
+            ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure
+            reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum
+            fugiat quo voluptas nulla pariatur?"
+            "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem
+            aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
+            Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni
+            dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor
+            sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore
+            magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis
+            suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in
+            ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas
+            nulla pariatur?"</p>
+    </div>
+
+    <div class="social-networks">
+
+        <div class="facebook">
+            <img src="imagenes/social-networks/face-logo.png" alt="LOGO HTML">
+        </div>
+
+        <div class="instagram">
+            <img src="imagenes/social-networks/insta-logo.png" alt="LOGO HTML">
+        </div>
+
+        <div class="youtube">
+            <img src="imagenes/social-networks/youtube-logo.png" alt="LOGO HTML">
+        </div>
+
+        <div class="twitter">
+            <img src="imagenes/social-networks/tw-logo.png" alt="LOGO HTML">
+        </div>
+
+    </div>
 
 </body>
 
