--- a/html/homepage.html
+++ b/html/homepage.html
@@ -27,11 +27,12 @@
     <div class="highlights-title">
         HIGHLIGHTS
     </div>
+
     <div class="highlights">
 
         <div class="cardio">
 
-            <img src="https://content.rsggroup.com/image/upload/q_auto:best,f_auto,dpr_2,w_320,h_480/v1576072380/Facelift2020/cardio_flip_kachel_01_320x480"
+            <img src="imagenes/hightlights/cardio.png"
                 alt="LOGO HTML">
         </div>
         <div class="maquinas">
@@ -89,6 +90,15 @@
             <img src="imagenes/social-networks/tw-logo.png" alt="LOGO HTML">
         </div>
 
+    </div>
+
+
+    <div class="baner">
+        <div class="baner-text">
+            © CVGYM
+        </div>
+        
+        <img src="imagenes/logobaner.png" alt="BANER HTML">
     </div>
 
 </body>
