Reestructuracion proyecto con Spring y mustache

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,14 +3,15 @@
 
 <head>
     <title>CvGYM</title>
-    <link rel="stylesheet" href="../css/homepage.css">
+    <meta http-equiv="Content-Type" content="text/html" charset="UTF-8" />
+    <link rel="stylesheet" href="css/homepage.css">
 </head>
 
 <body>
     <div class="menu">
 
         <div class="logo">
-            <img src="../html/imagenes/logo.png" alt="Logo HTML">
+            <img src="img/logo.png" alt="Logo HTML">
         </div>
 
 
@@ -32,7 +33,7 @@
 
         <div class="cardio">
 
-            <img src="imagenes/hightlights/cardio.png"
+            <img src="img/hightlights/cardio.png"
                 alt="LOGO HTML">
         </div>
         <div class="maquinas">
@@ -75,30 +76,28 @@
     <div class="social-networks">
 
         <div class="facebook">
-            <img src="imagenes/social-networks/face-logo.png" alt="LOGO HTML">
+            <img src="img/social-networks/face-logo.png" alt="LOGO HTML">
         </div>
 
         <div class="instagram">
-            <img src="imagenes/social-networks/insta-logo.png" alt="LOGO HTML">
+            <img src="img/social-networks/insta-logo.png" alt="LOGO HTML">
         </div>
 
         <div class="youtube">
-            <img src="imagenes/social-networks/youtube-logo.png" alt="LOGO HTML">
+            <img src="img/social-networks/youtube-logo.png" alt="LOGO HTML">
         </div>
 
         <div class="twitter">
-            <img src="imagenes/social-networks/tw-logo.png" alt="LOGO HTML">
+            <img src="img/social-networks/tw-logo.png" alt="LOGO HTML">
         </div>
 
     </div>
 
 
     <div class="baner">
-        <div class="baner-text">
-            © CVGYM
-        </div>
+        <div class="baner-text">© CVGYM</div>
         
-        <img src="imagenes/logobaner.png" alt="BANER HTML">
+        <img src="img/logobaner.png" alt="BANER HTML">
     </div>
 
 </body>
