--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>CvGYM</title>
     <meta http-equiv="Content-Type" content="text/html" charset="UTF-8" />
-    <link rel="stylesheet" href="css/homepage.css">
+    <link rel="stylesheet" href="/css/homepage.css">
 </head>
 
 <body>
