--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,14 +4,14 @@
 <head>
     <title>CvGYM</title>
     <meta http-equiv="Content-Type" content="text/html" charset="UTF-8" />
-    <link rel="stylesheet" href="../static/css/homepage.css">
+    <link rel="stylesheet" href="/css/homepage.css">
 </head>
 
 <body>
     <header>
         <nav>
             <div class="logo">
-                <img src="/static/img/logo.png" alt="Logo HTML">
+                <img src="/img/logo.png" alt="Logo HTML">
             </div>
 
             <ul class="sections">
