--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,14 +5,23 @@
     <title>CvGYM</title>
     <meta http-equiv="Content-Type" content="text/html" charset="UTF-8" />
     <link rel="stylesheet" href="/css/homepage.css">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
 </head>
 
 <body>
     <header>
         <nav>
+
             <div class="logo">
                 <img src="/img/logo.png" alt="Logo HTML">
             </div>
+
+            <input type="checkbox" id="check">
+            <label for="check" class="checkbtn">
+                <i class="fas fa-bars" style="color: white;"></i>
+
+            </label>
 
             <ul class="sections">
                 <li><a href="#">Inicio</a></li>
