nuevo formulario y actualizaciones

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -45,8 +45,8 @@
             <li><a href="javascript:void(0)" onclick="loadContent('html/forms/addCoach.html')">Galería</a></li>
             <li><a href="javascript:void(0)" onclick="loadContent('html/forms/addClass.html')">Precios</a></li>
             <li><a href="javascript:void(0)" onclick="loadContent('html/forms/createGym.html')">Productos</a></li>
-            <li><a href="javascript:void(0)" onclick="loadContent('html/prueba.html')">Contacto</a></li>
-            <li><a href="javascript:void(0)" onclick="loadContent('html/prueba.html')">>Ayuda y FAQ's</a></li>
+            <li><a href="javascript:void(0)" onclick="loadContent('html/forms/createClass.html')">Contacto</a></li>
+            <li><a href="javascript:void(0)" onclick="loadContent('html/prueba.html')">Ayuda y FAQ's</a></li>
         </ul>
 
     </nav>
