Arreglo fallo en inicio y css

--- a/src/main/resources/static/html/homepage.html
+++ b/src/main/resources/static/html/homepage.html
@@ -28,8 +28,8 @@
 </div>
 
 
-<div>
-    <p class="final-text">"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
+<div class="final-text">
+    <p class="text">"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
         laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae
         dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
         consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem
@@ -51,21 +51,25 @@
 
 <div class="social-networks">
 
-    <div class="facebook">
-        <img src="img/social-networks/face-logo.png" alt="LOGO HTML">
+    <div class="networks">
+
+        <div class="facebook">
+            <img src="img/social-networks/face-logo.png" alt="LOGO HTML">
+        </div>
+
+        <div class="instagram">
+            <img src="img/social-networks/insta-logo.png" alt="LOGO HTML">
+        </div>
+
+        <div class="youtube">
+            <img src="img/social-networks/youtube-logo.png" alt="LOGO HTML">
+        </div>
+
+        <div class="twitter">
+            <img src="img/social-networks/tw-logo.png" alt="LOGO HTML">
+        </div>
     </div>
 
-    <div class="instagram">
-        <img src="img/social-networks/insta-logo.png" alt="LOGO HTML">
-    </div>
-
-    <div class="youtube">
-        <img src="img/social-networks/youtube-logo.png" alt="LOGO HTML">
-    </div>
-
-    <div class="twitter">
-        <img src="img/social-networks/tw-logo.png" alt="LOGO HTML">
-    </div>
 
 </div>
 </body>
