--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -57,10 +57,14 @@
 </main>
 
 <footer>
-    <div class="baner">
-        <div class="baner-text">© CVGYM</div>
+    <div class="banner">
+        <div class="banner-text">
+            © CVGYM
+        </div>
+        <div>
+            <img src="img/logobaner.png" alt="BANNER HTML">
+        </div>
 
-        <img src="img/logobaner.png" alt="BANER HTML">
     </div>
 </footer>
 
