--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -47,7 +47,20 @@
             <li><a href="javascript:void(0)" onclick="loadContent('html/forms/createGym.html')">Productos</a></li>
             <li><a href="javascript:void(0)" onclick="loadContent('html/forms/createClass.html')">Contacto</a></li>
             <li><a href="javascript:void(0)" onclick="loadContent('html/prueba.html')">Ayuda y FAQ's</a></li>
+
         </ul>
+        <div class="dropdown">
+            <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+                Acciones Administrador
+            </a>
+
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                <li><a class="dropdown-item" href="javascript:void(0)" onclick="loadContent('html/forms/createGym.html')">Crear gimnasio</a></li>
+                <li><a class="dropdown-item" href="javascript:void(0)" onclick="loadContent('html/forms/createClass.html')">Crear clase</a></li>
+                <li><a class="dropdown-item" href="javascript:void(0)" onclick="loadContent('html/forms/addCoach.html')">Añadir entrenador a un gimnasio</a></li>
+                <li><a class="dropdown-item" href="javascript:void(0)" onclick="loadContent('html/forms/addClass.html')">Añadir clase a un gimnasio</a></li>
+            </ul>
+        </div>
 
     </nav>
 </header>
