--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -65,21 +65,24 @@
     </nav>
 </header>
 
-<main id="main">
+<main id="main" class="d-flex flex-column min-vh-100">
 
 </main>
 
-<footer>
-    <div class="banner">
-        <div class="banner-text">
-            © CVGYM
+<footer class="bg-dark text-white py-3 mt-auto">
+    <div class="container">
+        <div class="row justify-content-between">
+            <div class="col-6 text-left">
+                <p></p>
+                <p>© 2023 CVGYM</p>
+            </div>
+            <div class="col-6 d-flex justify-content-end">
+                <img src="img/logobaner.png" alt="BANNER HTML" style="height: 50px;">
+            </div>
         </div>
-        <div>
-            <img src="img/logobaner.png" alt="BANNER HTML">
-        </div>
-
     </div>
 </footer>
+
 
 <script src="js/main.js"></script>
 
