--- a/src/main/resources/static/html/forms/createGym.html
+++ b/src/main/resources/static/html/forms/createGym.html
@@ -16,7 +16,7 @@
     <div class="contenedor">
 
         <div class="form">
-            <form action="/gym" method="post">
+            <form action="/gym/" method="post">
                 <h2>Crear nuevo gimnasio</h2>
 
                 <div class="row">
@@ -45,9 +45,10 @@
 
 
                 <label  class="form-label">Comunidad Autónoma</label>
-                <select id="ccaa" class="form-select">
+                <select id="ccaa" name="ccaa"  class="form-select">
                     <option selected>Choose...</option>
                     <option>...</option>
+                    <option>Madrid</option>
                 </select>
 
                 <label class="form-label">Número de contacto</label>
