--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>CvGYM</title>
     <meta http-equiv="Content-Type" content="text/html" charset="UTF-8"/>
-    <link rel="stylesheet" href="/css/homepage.css">
+
 
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
@@ -27,7 +27,7 @@
 <body>
 <header>
     <nav>
-
+        <link rel="stylesheet" href="/css/homepage.css">
         <div class="logo">
             <img src="/img/logo.png" alt="Logo HTML">
         </div>
@@ -41,7 +41,7 @@
         <ul class="sections">
 
             <li><a href="./">Inicio</a></li>
-            <li><a href="javascript:void(0)" onclick="loadContent('html/prueba.html')">Centros</a></li>
+            <li><a href="/center/">Centros</a></li>
             <li><a href="javascript:void(0)" onclick="loadContent('html/forms/addCoach.html')">Galería</a></li>
             <li><a href="javascript:void(0)" onclick="loadContent('html/contents/prices.html')">Precios</a></li>
             <li><a href="javascript:void(0)" onclick="loadContent('html/forms/createGym.html')">Productos</a></li>
