Continuacion API-RESTController de contacto

--- a/src/main/resources/static/html/forms/createClass.html
+++ b/src/main/resources/static/html/forms/createClass.html
@@ -23,7 +23,7 @@
 
         <div class="form-group">
           <label for="exampleFormControlTextarea1">Descripción:</label>
-          <textarea class="form-control" id="exampleFormControlTextarea1" rows="4">Descripción aquí...</textarea>
+          <textarea class="form-control" id="exampleFormControlTextarea1" rows="4" placeholder="Descripción aquí..."></textarea>
         </div>
         <br><br>
 
