--- a/src/main/resources/static/html/contents/prices.html
+++ b/src/main/resources/static/html/contents/prices.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-  <link rel="stylesheet" href="/css/contents.css">
+  <link rel="stylesheet" href="/css/prices.css">
 </head>
 <body>
   <div>
